--- a/index.html
+++ b/index.html
@@ -5,44 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Horizon College</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="home">
-    <header class="header-gradient">
-        <div class="logo-section">
-            <img src="#" alt="School Logo Placeholder">
-            <h1>New Horizon College</h1>
-        </div>
-        <nav>
-            <a href="index.html" class="active">Home</a>
-            <a href="team.html">Our Team</a>
-        </nav>
+<body>
+    <header class="navy">
+        <img src="#" alt="School Logo Placeholder">
+        <h1>New Horizon College</h1>
     </header>
 
-    <main class="container">
-        <section class="mission">
-            <h2>Our Mission Statement</h2>
-            <p>
-                At <strong>New Horizon College</strong>, we aim to inspire innovation, leadership, and excellence 
-                in every student. Our environment encourages creativity, collaboration, and lifelong learning 
-                through the integration of technology and academics.
-            </p>
-            <div class="image-placeholder">[ Picture of Students in Uniform ]</div>
-        </section>
+    <nav class="yellow">
+        <a href="index.html">Home</a>
+        <a href="team.html">Our Team</a>
+    </nav>
 
-        <section class="admissions">
-            <h2>Admission Levels</h2>
-            <p>
-                We welcome students from <strong>Primary (Grades 1–7)</strong> and <strong>Secondary (Forms 1–6)</strong>.  
-                Our programs focus on academic mastery, character building, and global readiness through modern, 
-                student-centered teaching.
-            </p>
-        </section>
-    </main>
+    <div class="container">
+        <h2><strong>Our Mission Statement</strong></h2>
+        <div class="image-placeholder">[ Space for Picture of Students in Uniform ]</div>
 
-    <footer>
+        <p>
+            At <strong>New Horizon College</strong>, we are committed to nurturing academic excellence,
+            personal growth, and character development. We provide a supportive environment where students
+            learn, lead, and succeed.
+        </p>
+
+        <h2>Our Admission Levels</h2>
+        <p>
+            We admit students from <strong>Primary Level (Grade 1 - 7)</strong> and 
+            <strong>Secondary Level (Form 1 - 6)</strong>.  
+            Each level is structured to provide both academic and extracurricular growth that prepares our
+            learners for a successful future.
+        </p>
+    </div>
+
+    <footer class="navy">
         <p>Email: info@newhorizoncollege.ac.zw | Phone: +263 77 123 4567 | Location: Harare, Zimbabwe</p>
-        <p class="copyright">© 2025 New Horizon College. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
