--- a/team.html
+++ b/team.html
@@ -5,51 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team - New Horizon College</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="team">
-    <header class="header-gradient-yellow">
-        <div class="logo-section">
-            <img src="#" alt="School Logo Placeholder">
-            <h1>New Horizon College</h1>
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="team.html" class="active">Our Team</a>
-        </nav>
+<body>
+    <header class="yellow">
+        <img src="#" alt="School Logo Placeholder">
+        <h1>New Horizon College</h1>
     </header>
 
-    <main class="container">
-        <section class="team-section">
+    <nav class="navy">
+        <a href="index.html">Home</a>
+        <a href="team.html">Our Team</a>
+    </nav>
+
+    <div class="container">
+        <div class="section">
             <h2>Our Directors</h2>
-            <div class="card-grid">
-                <div class="profile-card">Director 1</div>
-                <div class="profile-card">Director 2</div>
-                <div class="profile-card">Director 3</div>
-            </div>
-        </section>
+            <div class="image-placeholder">Director 1</div>
+            <div class="image-placeholder">Director 2</div>
+            <div class="image-placeholder">Director 3</div>
+        </div>
 
-        <section class="team-section">
+        <div class="section">
             <h2>Headmaster</h2>
-            <div class="card-grid">
-                <div class="profile-card large">Headmaster</div>
-            </div>
-        </section>
+            <div class="image-placeholder">Headmaster</div>
+        </div>
 
-        <section class="team-section">
+        <div class="section">
             <h2>Our Teachers</h2>
-            <div class="card-grid">
-                <div class="profile-card">Teacher 1</div>
-                <div class="profile-card">Teacher 2</div>
-                <div class="profile-card">Teacher 3</div>
-                <div class="profile-card">Teacher 4</div>
-            </div>
-        </section>
-    </main>
+            <div class="image-placeholder">Teacher 1</div>
+            <div class="image-placeholder">Teacher 2</div>
+            <div class="image-placeholder">Teacher 3</div>
+        </div>
+    </div>
 
-    <footer>
+    <footer class="yellow">
         <p>Email: info@newhorizoncollege.ac.zw | Phone: +263 77 123 4567 | Location: Harare, Zimbabwe</p>
-        <p class="copyright">© 2025 New Horizon College. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
