Changes to code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="home">
     <header class="header-gradient">
         <div class="logo-section">
-            <img src="#" alt="School Logo Placeholder">
+            <img src="images/Logo.jpg"></img>
             <h1>New Horizon College</h1>
         </div>
         <nav>
@@ -27,7 +27,7 @@
                 in every student. Our environment encourages creativity, collaboration, and lifelong learning 
                 through the integration of technology and academics.
             </p>
-            <div class="image-placeholder">[ Picture of Students in Uniform ]</div>
+            <div class="image-placeholder"><img src="images/Uniform.jpg"></img></div>
         </section>
 
         <section class="admissions">
