Changes to code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Horizon College</title>
+    <title>New Horizon School</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <header class="header-gradient">
         <div class="logo-section">
             <img src="images/Logo.jpg"></img>
-            <h1>New Horizon College</h1>
+            <h1>New Horizon School</h1>
         </div>
         <nav>
             <a href="index.html" class="active">Home</a>
@@ -23,17 +23,25 @@
         <section class="mission">
             <h2>Our Mission Statement</h2>
             <p>
-                At <strong>New Horizon College</strong>, we aim to inspire innovation, leadership, and excellence 
+                At <strong>New Horizon School</strong>, we aim to inspire innovation, leadership, and excellence 
                 in every student. Our environment encourages creativity, collaboration, and lifelong learning 
-                through the integration of technology and academics.
+                through modern teaching techniques.
             </p>
-            <div class="image-placeholder"><img src="images/Uniform.jpg"></img></div>
+
+        <section class="motto">
+            <h2>Our Motto</h2>
+            <p>
+                Our motto here is <strong>Ultra Limits, Ad Horizontem</strong>, which translated from Latin says 
+                Beyond Limits, Towards Horizon. This motto embodies what our vision here is at the school and that instead
+                of settling for the basic standards of education we plan to give students extensive knowledge in all facets of education.
+            </p>
+            <div class="image-placeholder">[Placeholder Kids in School Uniform]</div>
         </section>
 
         <section class="admissions">
             <h2>Admission Levels</h2>
             <p>
-                We welcome students from <strong>Primary (Grades 1–7)</strong> and <strong>Secondary (Forms 1–6)</strong>.  
+                We welcome students from <strong> O' level Secondary (Forms 1–4)</strong>.  
                 Our programs focus on academic mastery, character building, and global readiness through modern, 
                 student-centered teaching.
             </p>
@@ -41,8 +49,8 @@
     </main>
 
     <footer>
-        <p>Email: info@newhorizoncollege.ac.zw | Phone: +263 77 123 4567 | Location: Harare, Zimbabwe</p>
-        <p class="copyright">© 2025 New Horizon College. All Rights Reserved.</p>
+        <p>Email: newhorizonschool2026@gmail.com | Phone: +263 77 976 1802 | Location: Chitungwiza, Zimbabwe</p>
+        <p class="copyright">© 2025 New Horizon School. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
