--- a/team.html
+++ b/team.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Team - New Horizon College</title>
+    <title>Our Team - New Horizon School</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body class="team">
     <header class="header-gradient-yellow">
         <div class="logo-section">
-            <img src="#" alt="School Logo Placeholder">
-            <h1>New Horizon College</h1>
+            <img src="images/Logo.jpg"></img>
+            <h1>New Horizon School</h1>
         </div>
         <nav>
             <a href="index.html">Home</a>
@@ -48,8 +48,8 @@
     </main>
 
     <footer>
-        <p>Email: info@newhorizoncollege.ac.zw | Phone: +263 77 123 4567 | Location: Harare, Zimbabwe</p>
-        <p class="copyright">© 2025 New Horizon College. All Rights Reserved.</p>
+        <p>Email: newhorizonschool2026@gmail.com | Phone: +263 77 976 1802 | Location: Chitungwiza, Zimbabwe</p>
+        <p class="copyright">© 2025 New Horizon School. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
