Changes to code

--- a/team.html
+++ b/team.html
@@ -23,9 +23,18 @@
         <section class="team-section">
             <h2>Our Directors</h2>
             <div class="card-grid">
-                <div class="profile-card">Director 1</div>
-                <div class="profile-card">Director 2</div>
-                <div class="profile-card">Director 3</div>
+                <div class="profile-card">
+                    <img src="images/lovemore.jpg">
+                    <h3>Lovemore Panashe Mazinyani</h3>
+                </div>
+                <div class="profile-card">
+                    <img src="images/mobby.jpg">
+                    <h3>Moreblessing Mushohwe</h3>
+                </div>
+                <div class="profile-card">
+                    <img src="images/muno.jpg">
+                    <h3>Munotida Siyakurima</h3>
+                </div>
             </div>
         </section>
 
