Changes to code

--- a/team.html
+++ b/team.html
@@ -10,8 +10,10 @@
 <body class="team">
     <header class="header-gradient-yellow">
         <div class="logo-section">
-            <img src="images/Logo.jpg"></img>
-            <h1>New Horizon School</h1>
+            <a href="index.html" class="logo-link">
+                <img src="images/Logo.jpg"></img>
+                <h1>New Horizon School</h1>
+            </a>
         </div>
         <nav>
             <a href="index.html">Home</a>
