Changes to code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
                 Beyond Limits, Towards Horizon. This motto embodies what our vision here is at the school and that instead
                 of settling for the basic standards of education we plan to give students extensive knowledge in all facets of education.
             </p>
-            <div class="image-placeholder">[Placeholder Kids in School Uniform]</div>
+            <div class="rectangle">
+                <img src="images/Uniform.jpg">
+            </div>
         </section>
 
         <section class="admissions">
