Changes to code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 of settling for the basic standards of education we plan to give students extensive knowledge in all facets of education.
             </p>
             <div class="rectangle">
-                <img src="images/Uniform.jpg">
+                <img src="images/Logo.jpg">
             </div>
         </section>
 
