Changes to code

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 in every student. Our environment encourages creativity, collaboration, and lifelong learning 
                 through modern teaching techniques.
             </p>
+        </section>
 
         <section class="motto">
             <h2>Our Motto</h2>
@@ -36,11 +37,14 @@
                 of settling for the basic standards of education we plan to give students extensive knowledge in all facets of education.
             </p>
         </section>
-        
-        <div class="rectangle">
-                <img src="images/Logo.jpg">
-        </div>
 
+        <section class="uniform"> 
+            <div class="rectangle">
+                    <img src="images/Logo.jpg">
+            </div>
+
+        </section>
+            
         <section class="admissions">
             <h2>Admission Levels</h2>
             <p>
