Changes to code

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
                 in every student. Our environment encourages creativity, collaboration, and lifelong learning 
                 through modern teaching techniques.
             </p>
-        </section>
 
         <section class="motto">
             <h2>Our Motto</h2>
@@ -36,15 +35,11 @@
                 Beyond Limits, Towards Horizon. This motto embodies what our vision here is at the school and that instead
                 of settling for the basic standards of education we plan to give students extensive knowledge in all facets of education.
             </p>
-        </section>
-
-        <section class="uniform"> 
             <div class="rectangle">
-                    <img src="images/Logo.jpg">
+                <img src="images/Uniform.jpg">
             </div>
-
         </section>
-            
+
         <section class="admissions">
             <h2>Admission Levels</h2>
             <p>
